retail-media/v2025.07/docs/pbr-metrics.mdx
---
title: "PBR Metrics"
---

1. Guides for Retail Media API
2. [Billing](/retail-media/v2025.07/docs/billing)

In this page, you will find the definition and details of all metrics currently supported in the [Partner Billing Report](doc:partner-billing-report).

***

## Metrics

| Dimensions                      | Data Type | Description                                                                                                                                                                                                                                                               |
| ------------------------------- | --------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `AccountName`                   | string    | [Account](doc:account) name                                                                                                                                                                                                                                               |
| `AccountId`                     | string    | [Account](doc:account) ID, generated by Criteo                                                                                                                                                                                                                            |
| `IsUnbillable`                  | string    | Flag if report item is billable or not based on the non-billable settings                                                                                                                                                                                                 |
| `AccountCategory`               | string    | The category the account falls under, values can be:- `Supply - Legacy`
- `Supply - Private Market`
- `Network Demand`
- `Private Market Demand - Brand`
- `Private Market Demand - Seller`                                                                               |
| `RetailerName`                  | string    | [Retailer](doc:retailers) name tied to the account                                                                                                                                                                                                                        |
| `AccountService`                | string    | Managed service or self-service⚠️ **Note**: if the `AccountCategory` is Network Demand, the value will be `null`.                                                                                                                                                         |
| `AccountCurrencyCode`           | string    | [Account](doc:account) currency, in 3-chars code (in [ISO-4217](https://www.iso.org/iso-4217-currency-codes.html) )                                                                                                                                                       |
| `Origin`                        | string    | Indicates the source of account creation, distinguishing whether the account was created by a third-party partner working with Criteo; if so, the partner’s name is specified, otherwise, `null` is expected                                                              |
| `OriginId`                      | integer   | `Origin` ID, generated by Criteo                                                                                                                                                                                                                                          |
| `BalanceId`                     | string    | [Balance](ref:balance) ID associated with the account, generated by Criteo                                                                                                                                                                                                |
| `BalanceName`                   | string    | [Balance](ref:balance) name⚠️ **Note**: if the `AccountCategory` is Network Demand, the value will be `null`.                                                                                                                                                             |
| `PurchaseOrder`                 | string    | Purchase order associated to the [Balance](ref:balance)⚠️ **Note**: if the `AccountCategory` is Network Demand, the value will be `null`.                                                                                                                                 |
| `BalanceStartDate`              | timestamp | Start date of the [Balance](ref:balance), in format `yyyy-mm-ddThh:mm:ss.sTZD`⚠️ **Note**: if the `AccountCategory` is Network Demand, the value will be `null`.                                                                                                          |
| `PrivateMarketPaymentOption`    |           | The payment option of the Private Market demand account at the balance level⚠️ **Note**: if the `AccountCategory` is Network Demand, the value will be `null`.                                                                                                            |
| `CampaignId`                    | string    | Campaign ID, generated by Criteo                                                                                                                                                                                                                                          |
| `CampaignName`                  | string    | Campaign name                                                                                                                                                                                                                                                             |
| `CampaignType`                  | string    | Campaign type (⚠️ [Campaigns](doc:campaigns) eg: `SponsoredProducts` )                                                                                                                                                                                                    |
| `BuyType`                       | string    | Campaign buying type (e.g. Auction, Preferred Deals, Sponsorship)                                                                                                                                                                                                         |
| `LineItemId`                    | string    | Line item ID, generated by Criteo                                                                                                                                                                                                                                         |
| `LineItemName`                  | string    | Line item name                                                                                                                                                                                                                                                            |
| `WorkingMediaSpend`             | decimal   | Working media spend                                                                                                                                                                                                                                                       |
| `CreditSpend`                   | decimal   | Credit spend is the amount of credit applied in a given month to restore a working media budget that was originally impacted by bots, technical errors, or human errors.                                                                                                  |
| `ValueAddSpend`                 | decimal   | Value add spend is the amount of free budget applied in a given month, typically granted to brands or agencies as an incentive to spend above a specific threshold, invest in new retailers, expand into new product categories, or test different formats and audiences. |
| `Clicks`                        | integer   | Amount of billable clicks recorded                                                                                                                                                                                                                                        |
| `Impressions`                   | integer   | Amount of billable impressions recorded                                                                                                                                                                                                                                   |
| `SupplyFeeAmount`               | decimal   | Retailer's SSP fee amount                                                                                                                                                                                                                                                 |
| `RetailerManagedFeeRate`        | decimal   | Managed service fee set at the supply account, which applies to the demand side of the supply account                                                                                                                                                                     |
| `RetailerManagedFeeAmount`      | decimal   | Retailer's managed service fee amount                                                                                                                                                                                                                                     |
| `RetailerAudienceDataFeeAmount` | decimal   | Retailer's offsite audience revenue before Criteo's take rate                                                                                                                                                                                                             |
| `CriteoRetailerDataFeeAmount`   | decimal   | Criteo's take rate from retailer offsite audience revenue                                                                                                                                                                                                                 |
| `UtcOffset`                     | string    | Timezone offset of the account                                                                                                                                                                                                                                            |

***

[Partner Billing Report](/retail-media/v2025.07/docs/partner-billing-report)

[Campaigns](/retail-media/v2025.07/docs/campaign)
