retail-media/v2026.01/docs/pbr-metrics.mdx
---
title: PBR Metrics
original_file: to-migrate/criteo-dev-portal-full-export/merged_export/Retail_Media/v2026_01/docs/Guides for Retail Media API/billing/pbr-metrics.md
---



## Introduction

In this page, you will find the definition and details of all metrics currently supported in the [Partner Billing Report](/retail-media/v2026.01/docs/partner-billing-report).

***

## Metrics

<table>
 <thead>
  <tr>
   <th>
    <p>
     Dimensions
    </p>
   </th>
   <th>
    <p>
     Data Type
    </p>
   </th>
   <th>
    <p>
     Description
    </p>
   </th>
  </tr>
 </thead>
 <tbody>
  <tr>
   <td>
    <p>
     <code>
      AccountName
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     Account name
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      AccountId
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     Account ID, generated by Criteo
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      IsUnbillable
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     Flag if report item is billable or not based on the non-billable settings
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      AccountCategory
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     The category the account falls under, values can be:
    </p>
    <ul>
     <li>
      <code>
       Supply - Legacy
      </code>
     </li>
     <li>
      <code>
       Supply - Private Market
      </code>
     </li>
     <li>
      <code>
       Network Demand
      </code>
     </li>
     <li>
      <code>
       Private Market Demand - Brand
      </code>
     </li>
     <li>
      <code>
       Private Market Demand - Seller
      </code>
     </li>
    </ul>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      RetailerName
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     Retailer name tied to the account
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      AccountService
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     Managed service or self-service
    </p>
    <p>
     ⚠️
     <b>
      Note
     </b>
     : if the
     <code>
      AccountCategory
     </code>
     is Network Demand, the value will be
     <code>
      null
     </code>
     .
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      BudgetModel
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     The value should reflect either “Retailer” or “Criteo” is doing the billing
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      AccountCurrencyCode
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     Account currency, in 3-chars code (in <a href="https://www.iso.org/iso-4217-currency-codes.html">ISO-4217</a> )
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      Origin
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     Indicates the source of account creation, distinguishing whether the account was created by a third-party partner working with Criteo; if so, the partner’s name is specified, otherwise,
     <code>
      null
     </code>
     is expected
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      OriginId
     </code>
    </p>
   </td>
   <td>
    <p>
     integer
    </p>
   </td>
   <td>
    <p>
     <code>
      Origin
     </code>
     ID, generated by Criteo
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      BalanceId
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     Balance ID associated with the account, generated by Criteo
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      BalanceName
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     Balance name
    </p>
    <p>
     ⚠️
     <b>
      Note
     </b>
     : if the
     <code>
      AccountCategory
     </code>
     is Network Demand, the value will be
     <code>
      null
     </code>
     .
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      PurchaseOrder
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     Purchase order associated to the Balance
    </p>
    <p>
     ⚠️
     <b>
      Note
     </b>
     : if the
     <code>
      AccountCategory
     </code>
     is Network Demand, the value will be
     <code>
      null
     </code>
     .
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      BalanceStartDate
     </code>
    </p>
   </td>
   <td>
    <p>
     timestamp
    </p>
   </td>
   <td>
    <p>
     Start date of the Balance, in format
     <code>
      yyyy-mm-ddThh:mm:ss.sTZD
     </code>
    </p>
    <p>
     ⚠️
     <b>
      Note
     </b>
     : if the
     <code>
      AccountCategory
     </code>
     is Network Demand, the value will be
     <code>
      null
     </code>
     .
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      PrivateMarketPaymentOption
     </code>
    </p>
   </td>
   <td>
   </td>
   <td>
    <p>
     The payment option of the Private Market demand account at the balance level
    </p>
    <p>
     ⚠️
     <b>
      Note
     </b>
     : if the
     <code>
      AccountCategory
     </code>
     is Network Demand, the value will be
     <code>
      null
     </code>
     .
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      CampaignId
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     Campaign ID, generated by Criteo
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      CampaignName
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     Campaign name
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      CampaignType
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     Campaign type (⚠️ <a href="/retail-media/v2026-preview/docs/campaigns">Campaigns</a> eg:
     <code>
      SponsoredProducts
     </code>
     )
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      BuyType
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     Campaign buying type (e.g. Auction, Preferred Deals, Sponsorship)
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      LineItemId
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     Line item ID, generated by Criteo
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      LineItemName
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     Line item name
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      WorkingMediaSpend
     </code>
    </p>
   </td>
   <td>
    <p>
     decimal
    </p>
   </td>
   <td>
    <p>
     Working media spend
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      CreditSpend
     </code>
    </p>
   </td>
   <td>
    <p>
     decimal
    </p>
   </td>
   <td>
    <p>
     Credit spend is the amount of credit applied in a given month to restore a working media budget that was originally impacted by bots, technical errors, or human errors.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      ValueAddSpend
     </code>
    </p>
   </td>
   <td>
    <p>
     decimal
    </p>
   </td>
   <td>
    <p>
     Value add spend is the amount of free budget applied in a given month, typically granted to brands or agencies as an incentive to spend above a specific threshold, invest in new retailers, expand into new product categories, or test different formats and audiences.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      Clicks
     </code>
    </p>
   </td>
   <td>
    <p>
     integer
    </p>
   </td>
   <td>
    <p>
     Amount of billable clicks recorded
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      Impressions
     </code>
    </p>
   </td>
   <td>
    <p>
     integer
    </p>
   </td>
   <td>
    <p>
     Amount of billable impressions recorded
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      SupplyFeeAmount
     </code>
    </p>
   </td>
   <td>
    <p>
     decimal
    </p>
   </td>
   <td>
    <p>
     Retailer's SSP fee amount
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      RetailerManagedFeeRate
     </code>
    </p>
   </td>
   <td>
    <p>
     decimal
    </p>
   </td>
   <td>
    <p>
     Managed service fee set at the supply account, which applies to the demand side of the supply account
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      RetailerManagedFeeAmount
     </code>
    </p>
   </td>
   <td>
    <p>
     decimal
    </p>
   </td>
   <td>
    <p>
     Retailer's managed service fee amount
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      RetailerAudienceDataFeeAmount
     </code>
    </p>
   </td>
   <td>
    <p>
     decimal
    </p>
   </td>
   <td>
    <p>
     Retailer's offsite audience revenue before Criteo's take rate
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      CriteoRetailerDataFeeAmount
     </code>
    </p>
   </td>
   <td>
    <p>
     decimal
    </p>
   </td>
   <td>
    <p>
     Criteo's take rate from retailer offsite audience revenue
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      UtcOffset
     </code>
    </p>
   </td>
   <td>
    <p>
     string
    </p>
   </td>
   <td>
    <p>
     Timezone offset of the account
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      SalesEnablementServiceFeeAmount
     </code>
    </p>
   </td>
   <td>
    <p>
     decimal
    </p>
   </td>
   <td>
    <p>
     Retailer's sales enablement professional service fee amount
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      SelfServiceEnablementServiceFeeAmount
     </code>
    </p>
   </td>
   <td>
    <p>
     decimal
    </p>
   </td>
   <td>
    <p>
     Retailer's self-service enablement professional service fee amount
    </p>
   </td>
  </tr>
 </tbody>
</table>

***

<br />


